--- a/dev/partials/posts/4.html
+++ b/dev/partials/posts/4.html
@@ -36,7 +36,7 @@ ctx.drawImage origImage 0 0 width height</code>
 <p>
 I had two goals when creating my most recent client-side image resizer: First, I wanted it to be an angular directive. Second, it needed to have fast, high quality image resizing comparable to Photoshop.</p>
 
-<p>Thanks to <a href="https://github.com/Mischi">Fabian Raetz</a> for creating the foundation for an <a href="https://github.com/Mischi/angularjs-imageupload-directive">angular image-resize directive</a>, and <a href="https://github.com/gamealchemist/">gamealchemist</a> for providing an excellent image resize algorithm in response to a <a href="http://stackoverflow.com/questions/18922880/html5-canvas-resize-downscale-image-high-quality">stackoverflow question</a>, I merged, refined, and birthed, the canvas-image-resize directive:</p>
+<p>Thanks to <a href="https://github.com/Mischi">Fabian Raetz</a> for creating the foundation for an <a href="https://github.com/Mischi/angularjs-imageupload-directive">angular image-resize directive</a>, and <a href="https://github.com/gamealchemist/">gamealchemist</a> for providing an excellent image resize algorithm in response to a <a href="http://stackoverflow.com/questions/18922880/html5-canvas-resize-downscale-image-high-quality">stackoverflow question</a>, I merged, refined, and birthed, the angular-high-quality-image-resize-directive:</p>
 
 <p>
   <a href="https://github.com/taylorcode/angular-high-quality-image-resize-directive">Angular High Quality Image Resize Directive</a>
