added images to post

--- a/dev/assets/sass/main.sass
+++ b/dev/assets/sass/main.sass
@@ -202,6 +202,13 @@ body
 		font-family: Lustria
 	.disqus_thread
 		margin-top: 20px
+	figure
+		margin-bottom: 20px
+		figcaption
+			padding: 20px 0px
+	.open-window
+		text-align: right
+		display: block
 
 #projects
 	[image-modal], [video-modal]
