--- a/dev/partials/posts/4.html
+++ b/dev/partials/posts/4.html
@@ -42,3 +42,21 @@ I had two goals when creating my most recent client-side image resizer: First, I
   <a href="https://github.com/taylorcode/angular-high-quality-image-resize-directive">Angular High Quality Image Resize Directive</a>
 </p>
 
+<div>
+	<a href="http://cdn.running.competitor.com/files/2012/03/110113_049_o.jpg" class="open-window">Click to View Original Image</a>
+	<figure>
+		<img src="assets/images/posts/shoe-low-quality-resize.png">
+		<figcaption>Standard <span class="code">drawImage</span> Method</figcaption>
+	</figure>
+	<figure>
+		<img src="assets/images/posts/shoe-high-quality-resize.png">
+		<figcaption>Gamealchemist&#39;s Algorithm</figcaption>
+	</figure>
+	<figure>
+		<img src="assets/images/posts/shoe-photoshop-resize.png">
+		<figcaption>Photoshop Resize</figcaption>
+	</figure>
+</div>
+
+
+
