--- a/dev/assets/stylesheets/main.css
+++ b/dev/assets/stylesheets/main.css
@@ -271,8 +271,21 @@ body > header figure a {
 #post .disqus_thread {
   margin-top: 20px;
 }
-
+/* line 205, ../sass/main.sass */
+#post figure {
+  margin-bottom: 20px;
+}
 /* line 207, ../sass/main.sass */
+#post figure figcaption {
+  padding: 20px 0px;
+}
+/* line 209, ../sass/main.sass */
+#post .open-window {
+  text-align: right;
+  display: block;
+}
+
+/* line 214, ../sass/main.sass */
 #projects [image-modal], #projects [video-modal] {
   position: fixed;
   width: 100%;
@@ -283,34 +296,34 @@ body > header figure a {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.7);
 }
-/* line 216, ../sass/main.sass */
+/* line 223, ../sass/main.sass */
 #projects [image-modal]:before, #projects [video-modal]:before {
   content: "";
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 221, ../sass/main.sass */
+/* line 228, ../sass/main.sass */
 #projects [image-modal] figure, #projects [video-modal] figure {
   display: inline-block;
   vertical-align: middle;
 }
-/* line 224, ../sass/main.sass */
+/* line 231, ../sass/main.sass */
 #projects [image-modal] figure img, #projects [video-modal] figure img {
   max-height: 100%;
   max-width: 80%;
 }
-/* line 230, ../sass/main.sass */
+/* line 237, ../sass/main.sass */
 #projects [image-modal] figure figcaption {
   display: inline-block;
   color: white;
   margin-top: 20px;
 }
-/* line 235, ../sass/main.sass */
+/* line 242, ../sass/main.sass */
 #projects [video-modal] figure {
   width: 100%;
 }
-/* line 237, ../sass/main.sass */
+/* line 244, ../sass/main.sass */
 #projects [video-modal] figure div {
   width: 80%;
   max-width: 1280px;
@@ -318,13 +331,13 @@ body > header figure a {
   position: relative;
   display: inline-block;
 }
-/* line 243, ../sass/main.sass */
+/* line 250, ../sass/main.sass */
 #projects [video-modal] figure div:after {
   content: "";
   padding-top: 56.25%;
   display: block;
 }
-/* line 247, ../sass/main.sass */
+/* line 254, ../sass/main.sass */
 #projects [video-modal] figure div iframe {
   width: 100%;
   height: 100%;
@@ -332,27 +345,27 @@ body > header figure a {
   left: 0;
   top: 0;
 }
-/* line 255, ../sass/main.sass */
+/* line 262, ../sass/main.sass */
 #projects article [image-slider] {
   float: right;
   width: 38.19656%;
   margin-left: 58px;
   overflow: visible;
 }
-/* line 260, ../sass/main.sass */
+/* line 267, ../sass/main.sass */
 #projects article [image-slider] > div {
   overflow: visible;
 }
-/* line 262, ../sass/main.sass */
+/* line 269, ../sass/main.sass */
 #projects article [image-slider] nav {
   float: left;
   margin-left: -38px;
 }
-/* line 265, ../sass/main.sass */
+/* line 272, ../sass/main.sass */
 #projects article [image-slider] nav div {
   cursor: pointer;
 }
-/* line 267, ../sass/main.sass */
+/* line 274, ../sass/main.sass */
 #projects article [image-slider] nav div a {
   width: 0;
   height: 0;
@@ -361,34 +374,34 @@ body > header figure a {
   display: block;
   margin: 6px 15px;
 }
-/* line 274, ../sass/main.sass */
+/* line 281, ../sass/main.sass */
 #projects article [image-slider] nav div:first-child a {
   border-color: transparent;
   border-left-color: #505050;
   border-width: 5px 0 5px 8.7px;
 }
-/* line 278, ../sass/main.sass */
+/* line 285, ../sass/main.sass */
 #projects article [image-slider] nav div:first-child a.disabled {
   border-left-color: #e2e2e2;
 }
-/* line 280, ../sass/main.sass */
+/* line 287, ../sass/main.sass */
 #projects article [image-slider] nav div:last-child a {
   border-color: transparent;
   border-right-color: #505050;
   border-width: 5px 8.7px 5px 0;
 }
-/* line 284, ../sass/main.sass */
+/* line 291, ../sass/main.sass */
 #projects article [image-slider] nav div:last-child a.disabled {
   border-right-color: #e2e2e2;
 }
-/* line 286, ../sass/main.sass */
+/* line 293, ../sass/main.sass */
 #projects article [image-slider] ul {
   padding-bottom: 66.2%;
   white-space: nowrap;
   display: block;
   position: relative;
 }
-/* line 291, ../sass/main.sass */
+/* line 298, ../sass/main.sass */
 #projects article [image-slider] ul li {
   display: none;
   width: 100%;
@@ -402,11 +415,11 @@ body > header figure a {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 297, ../sass/main.sass */
+/* line 304, ../sass/main.sass */
 #projects article [image-slider] ul li.old, #projects article [image-slider] ul li.current, #projects article [image-slider] ul li.current + li {
   display: inline-block;
 }
-/* line 299, ../sass/main.sass */
+/* line 306, ../sass/main.sass */
 #projects article [image-slider] ul li.old {
   -webkit-transform: translateX(-100%);
   -moz-transform: translateX(-100%);
@@ -414,7 +427,7 @@ body > header figure a {
   -o-transform: translateX(-100%);
   transform: translateX(-100%);
 }
-/* line 301, ../sass/main.sass */
+/* line 308, ../sass/main.sass */
 #projects article [image-slider] ul li.current {
   -webkit-transform: translateX(0);
   -moz-transform: translateX(0);
@@ -422,7 +435,7 @@ body > header figure a {
   -o-transform: translateX(0);
   transform: translateX(0);
 }
-/* line 303, ../sass/main.sass */
+/* line 310, ../sass/main.sass */
 #projects article [image-slider] ul li.current + li {
   -webkit-transform: translateX(100%);
   -moz-transform: translateX(100%);
@@ -430,77 +443,77 @@ body > header figure a {
   -o-transform: translateX(100%);
   transform: translateX(100%);
 }
-/* line 305, ../sass/main.sass */
+/* line 312, ../sass/main.sass */
 #projects article [image-slider] ul li img {
   width: 100%;
   -webkit-user-drag: none;
 }
-/* line 308, ../sass/main.sass */
+/* line 315, ../sass/main.sass */
 #projects article [image-slider] ul li img:hover, #projects article [image-slider] ul li img:active {
   opacity: 0.95;
 }
-/* line 310, ../sass/main.sass */
+/* line 317, ../sass/main.sass */
 #projects img {
   cursor: pointer;
 }
 
-/* line 314, ../sass/main.sass */
+/* line 321, ../sass/main.sass */
 #blog article, #post article {
   width: 61.8033%;
 }
-/* line 316, ../sass/main.sass */
+/* line 323, ../sass/main.sass */
 #blog article ol, #blog article ul, #post article ol, #post article ul {
   overflow: visible;
   margin-left: 20px;
 }
-/* line 319, ../sass/main.sass */
+/* line 326, ../sass/main.sass */
 #blog article ol li, #blog article ul li, #post article ol li, #post article ul li {
   overflow: visible;
   margin-bottom: 15px;
 }
-/* line 322, ../sass/main.sass */
+/* line 329, ../sass/main.sass */
 #blog article ol li em, #blog article ul li em, #post article ol li em, #post article ul li em {
   font-style: normal;
 }
-/* line 324, ../sass/main.sass */
+/* line 331, ../sass/main.sass */
 #blog article ol li p, #blog article ul li p, #post article ol li p, #post article ul li p {
   color: #505050;
   font-size: 13px;
 }
 
-/* line 327, ../sass/main.sass */
+/* line 334, ../sass/main.sass */
 #post {
   margin-top: 80px;
 }
-/* line 329, ../sass/main.sass */
+/* line 336, ../sass/main.sass */
 #post h1 {
   font-size: 50px;
   margin-bottom: 30px;
   line-height: 54px;
 }
-/* line 333, ../sass/main.sass */
+/* line 340, ../sass/main.sass */
 #post h2 {
   font-size: 20px;
 }
-/* line 335, ../sass/main.sass */
+/* line 342, ../sass/main.sass */
 #post h3 {
   font-size: 30px;
   font-weight: 400;
   margin-bottom: 12px;
   margin-top: 5px;
 }
-/* line 340, ../sass/main.sass */
+/* line 347, ../sass/main.sass */
 #post h4 {
   margin-bottom: 10px;
   margin-top: 17px;
   color: #505050;
 }
-/* line 344, ../sass/main.sass */
+/* line 351, ../sass/main.sass */
 #post span.code {
   background: #f0f0f0;
   font-family: monospace;
 }
-/* line 348, ../sass/main.sass */
+/* line 355, ../sass/main.sass */
 #post .fixed-upper-right {
   top: 162px;
   width: 100%;
@@ -508,27 +521,27 @@ body > header figure a {
   position: fixed;
   opacity: 0.7;
 }
-/* line 354, ../sass/main.sass */
+/* line 361, ../sass/main.sass */
 #post .fixed-upper-right:hover, #post .fixed-upper-right:active {
   opacity: 1;
 }
-/* line 356, ../sass/main.sass */
+/* line 363, ../sass/main.sass */
 #post .fixed-upper-right div {
   width: 960px;
 }
-/* line 358, ../sass/main.sass */
+/* line 365, ../sass/main.sass */
 #post .fixed-upper-right div a {
   float: right;
   border: 1px solid #f0f0f0;
   padding: 11px 20px 13px 12px;
   text-decoration: none;
 }
-/* line 363, ../sass/main.sass */
+/* line 370, ../sass/main.sass */
 #post .fixed-upper-right div a span {
   display: inline-block;
   vertical-align: middle;
 }
-/* line 366, ../sass/main.sass */
+/* line 373, ../sass/main.sass */
 #post .fixed-upper-right div a .home {
   background: url(../images/icons/home.svg) center center no-repeat;
   width: 20px;
@@ -536,38 +549,38 @@ body > header figure a {
   margin-right: 7px;
 }
 
-/* line 371, ../sass/main.sass */
+/* line 378, ../sass/main.sass */
 .scroll {
   position: relative;
 }
 
 @media all and (max-width: 470px) {
-  /* line 379, ../sass/main.sass */
+  /* line 386, ../sass/main.sass */
   body header {
     text-align: center;
   }
-  /* line 381, ../sass/main.sass */
+  /* line 388, ../sass/main.sass */
   body header figure {
     float: none;
     display: inline-block;
   }
-  /* line 384, ../sass/main.sass */
+  /* line 391, ../sass/main.sass */
   body header nav {
     clear: left;
   }
-  /* line 386, ../sass/main.sass */
+  /* line 393, ../sass/main.sass */
   body header nav ul {
     float: none;
   }
 }
 @media all and (max-width: 500px) {
-  /* line 391, ../sass/main.sass */
+  /* line 398, ../sass/main.sass */
   h1 {
     font-size: 42px;
     letter-spacing: -2px;
   }
 
-  /* line 395, ../sass/main.sass */
+  /* line 402, ../sass/main.sass */
   h2 {
     font-size: 25px;
     border-bottom: 2px solid #e2e2e2;
@@ -576,57 +589,57 @@ body > header figure a {
     letter-spacing: -1px;
   }
 
-  /* line 402, ../sass/main.sass */
+  /* line 409, ../sass/main.sass */
   h3 {
     font-size: 21px;
   }
 
-  /* line 407, ../sass/main.sass */
+  /* line 414, ../sass/main.sass */
   #post h1 {
     font-size: 40px;
     line-height: 39px;
   }
-  /* line 410, ../sass/main.sass */
+  /* line 417, ../sass/main.sass */
   #post h2 {
     font-size: 20px;
   }
-  /* line 412, ../sass/main.sass */
+  /* line 419, ../sass/main.sass */
   #post h3 {
     font-size: 30px;
     line-height: 32px;
   }
 
-  /* line 415, ../sass/main.sass */
+  /* line 422, ../sass/main.sass */
   #intro {
     margin: 0 0 30px 0;
   }
-  /* line 417, ../sass/main.sass */
+  /* line 424, ../sass/main.sass */
   #intro h1 {
     margin-bottom: 15px;
   }
-  /* line 419, ../sass/main.sass */
+  /* line 426, ../sass/main.sass */
   #intro h3 {
     margin-left: 8px;
   }
 
-  /* line 422, ../sass/main.sass */
+  /* line 429, ../sass/main.sass */
   #tags {
     display: none;
   }
 
-  /* line 426, ../sass/main.sass */
+  /* line 433, ../sass/main.sass */
   #projects h3, #blog h3 {
     margin-top: 15px;
   }
 
-  /* line 431, ../sass/main.sass */
+  /* line 438, ../sass/main.sass */
   #projects article [image-slider] {
     float: none;
     margin-left: 0;
     position: relative;
     width: auto;
   }
-  /* line 436, ../sass/main.sass */
+  /* line 443, ../sass/main.sass */
   #projects article [image-slider] nav {
     margin-left: 0;
     position: absolute;
@@ -637,59 +650,59 @@ body > header figure a {
     text-align: center;
     height: 100%;
   }
-  /* line 445, ../sass/main.sass */
+  /* line 452, ../sass/main.sass */
   #projects article [image-slider] nav div {
     background-color: rgba(255, 255, 255, 0.02);
     height: 100%;
   }
-  /* line 446, ../sass/main.sass */
+  /* line 453, ../sass/main.sass */
   #projects article [image-slider] nav div:before {
     content: "";
     display: inline-block;
     height: 100%;
     vertical-align: middle;
   }
-  /* line 453, ../sass/main.sass */
+  /* line 460, ../sass/main.sass */
   #projects article [image-slider] nav div:first-child {
     float: right;
   }
-  /* line 455, ../sass/main.sass */
+  /* line 462, ../sass/main.sass */
   #projects article [image-slider] nav div:last-child {
     float: left;
   }
-  /* line 457, ../sass/main.sass */
+  /* line 464, ../sass/main.sass */
   #projects article [image-slider] nav div a {
     display: inline-block;
     vertical-align: middle;
   }
-  /* line 461, ../sass/main.sass */
+  /* line 468, ../sass/main.sass */
   #projects article [image-slider] ul {
     width: auto;
   }
 }
 @media all and (max-width: 960px) {
-  /* line 467, ../sass/main.sass */
+  /* line 474, ../sass/main.sass */
   body * {
     overflow: hidden;
   }
-  /* line 470, ../sass/main.sass */
+  /* line 477, ../sass/main.sass */
   body > * {
     width: auto;
     padding: 20px;
     padding-top: 0px;
   }
-  /* line 474, ../sass/main.sass */
+  /* line 481, ../sass/main.sass */
   body > #colors {
     padding: 0px;
   }
 }
 @media all and (max-width: 750px) {
-  /* line 479, ../sass/main.sass */
+  /* line 486, ../sass/main.sass */
   #blog article, #post article {
     width: auto;
   }
 
-  /* line 482, ../sass/main.sass */
+  /* line 489, ../sass/main.sass */
   #post .fixed-upper-right {
     background: white;
     bottom: 0;
@@ -697,100 +710,100 @@ body > header figure a {
     top: auto;
     text-align: center;
   }
-  /* line 488, ../sass/main.sass */
+  /* line 495, ../sass/main.sass */
   #post .fixed-upper-right div {
     width: auto;
   }
-  /* line 490, ../sass/main.sass */
+  /* line 497, ../sass/main.sass */
   #post .fixed-upper-right div a {
     float: none;
     display: block;
   }
 }
 @media all and (min-width: 501px) and (max-width: 750px) {
-  /* line 496, ../sass/main.sass */
+  /* line 503, ../sass/main.sass */
   #projects section, #projects p {
     display: inline;
   }
-  /* line 498, ../sass/main.sass */
+  /* line 505, ../sass/main.sass */
   #projects [image-slider] {
     margin-bottom: 20px;
   }
 }
 @media all and (min-width: 1201px) and (max-width: 1400px) {
-  /* line 504, ../sass/main.sass */
+  /* line 511, ../sass/main.sass */
   body > * {
     width: 1020px;
   }
 
-  /* line 506, ../sass/main.sass */
+  /* line 513, ../sass/main.sass */
   h1 {
     font-size: 62px;
   }
 
-  /* line 508, ../sass/main.sass */
+  /* line 515, ../sass/main.sass */
   h2 {
     font-size: 31px;
   }
 
-  /* line 510, ../sass/main.sass */
+  /* line 517, ../sass/main.sass */
   h3 {
     font-size: 23px;
   }
 
-  /* line 513, ../sass/main.sass */
+  /* line 520, ../sass/main.sass */
   #post h1 {
     font-size: 52px;
   }
-  /* line 515, ../sass/main.sass */
+  /* line 522, ../sass/main.sass */
   #post h2 {
     font-size: 22px;
   }
-  /* line 517, ../sass/main.sass */
+  /* line 524, ../sass/main.sass */
   #post h3 {
     font-size: 32px;
   }
 
-  /* line 519, ../sass/main.sass */
+  /* line 526, ../sass/main.sass */
   #post .fixed-upper-right div {
     width: 1020px;
   }
 }
 @media all and (min-width: 1401px) {
-  /* line 524, ../sass/main.sass */
+  /* line 531, ../sass/main.sass */
   body > * {
     width: 1080px;
   }
 
-  /* line 527, ../sass/main.sass */
+  /* line 534, ../sass/main.sass */
   h1 {
     font-size: 64px;
   }
 
-  /* line 529, ../sass/main.sass */
+  /* line 536, ../sass/main.sass */
   h2 {
     font-size: 32px;
   }
 
-  /* line 531, ../sass/main.sass */
+  /* line 538, ../sass/main.sass */
   h3 {
     font-size: 24px;
   }
 
-  /* line 534, ../sass/main.sass */
+  /* line 541, ../sass/main.sass */
   #post h1 {
     font-size: 54px;
   }
-  /* line 536, ../sass/main.sass */
+  /* line 543, ../sass/main.sass */
   #post h2 {
     font-size: 24px;
   }
-  /* line 538, ../sass/main.sass */
+  /* line 545, ../sass/main.sass */
   #post h3 {
     font-size: 36px;
   }
 
-  /* line 540, ../sass/main.sass */
+  /* line 547, ../sass/main.sass */
   #post .fixed-upper-right div {
     width: 1080px;
   }
