--- a/dev/assets/sass/main.sass
+++ b/dev/assets/sass/main.sass
@@ -206,7 +206,10 @@ body
 		margin-bottom: 20px
 		figcaption
 			padding: 20px 0px
+		img
+			max-width: 100%
 	.open-window
+		padding-bottom: 20px
 		text-align: right
 		display: block
 
